fix the gap of the card in mobile screen

--- a/css/Style.css
+++ b/css/Style.css
@@ -78,7 +78,7 @@ h1 {
   justify-content: center;
   display: flex;
   gap: 10px;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 .input-container {
   position: relative;
